force-app/main/default/objects/ccrz__E_PriceList__c/ccrz__E_PriceList__c.object-meta.xml
<CustomObject>
    <description>Represents a grouping of products to control pricing and entitlements.  The B2B Commerce pricelist object controls both pricing and entitlements, but can be used just for the purposes of entitlements. A list needs to be created for each currency that needs to be represented, allowing for different entitlments and pricing based on the locale and currency.</description>
    <label>CC Price List</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>