force-app/main/default/objects/ccrz__E_PriceList__c/fields/ccrz__CurrencyISOCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CurrencyISOCode__c</fullName>
    <description>Required - The 3-character ISO currency code corresponding to this list. For example, USD</description>
    <label>Currency ISO Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>