force-app/main/default/objects/ccrz__E_PriceList__c/fields/ccrz__CustomerTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CustomerTypeCode__c</fullName>
    <label>Customer Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>