force-app/main/default/objects/ccrz__E_PriceList__c/fields/ccrz__Desc__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Desc__c</fullName>
    <description>A description of the pricelist - internal only</description>
    <label>Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>