force-app/main/default/objects/ccrz__E_PriceList__c/fields/ccrz__EndDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__EndDate__c</fullName>
    <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
    <description>The date on which the pricelist is no longer active.  For example, if the EndDate__c is set to July 1, 2015 then the last date that this price list is valid will be June 30, 2015.</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>