force-app/main/default/objects/ccrz__E_PriceList__c/fields/ccrz__PricelistId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PricelistId__c</fullName>
    <description>External reference id for this entry</description>
    <externalId>true</externalId>
    <label>Pricelist Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>