force-app/main/default/objects/ccrz__E_PriceList__c/fields/ccrz__SupplierKey__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SupplierKey__c</fullName>
    <description>Deprecated</description>
    <label>Supplier Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>