force-app/main/default/objects/ccrz__E_PriceList__c/listViews/All_DLR_Pricelists.listView-meta.xml
<ListView>
    <fullName>All_DLR_Pricelists</fullName>
    <columns>NAME</columns>
    <columns>ccrz__Desc__c</columns>
    <columns>ccrz__CustomerTypeCode__c</columns>
    <columns>ccrz__PricelistId__c</columns>
    <columns>ccrz__CurrencyISOCode__c</columns>
    <columns>B2B_Full_SF_ID__c</columns>
    <columns>ccrz__Storefront__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>DLR</value>
    </filters>
    <label>All DLR Pricelists</label>
</ListView>