force-app/main/default/objects/ccrz__E_PriceList__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__Desc__c</columns>
    <columns>ccrz__CustomerTypeCode__c</columns>
    <columns>ccrz__PricelistId__c</columns>
    <columns>ccrz__CurrencyISOCode__c</columns>
    <columns>B2B_Full_SF_ID__c</columns>
    <columns>ccrz__Storefront__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>